--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="./css/base.css">
   <link rel="stylesheet" href="./css/section.css">
   <link rel="stylesheet" href="./css/responsive.css">
+  
   <link rel="preconnect" 
   href="https://fonts.googleapis.com">
   <link rel="preconnect" 
@@ -79,6 +80,63 @@
       <label for="" class="text-label">Skill</label>
       <label for="" class="text-label">Skill</label>
       <label for="" class="text-label">Skill</label>
+    </div>
+  </section>
+
+  <section class="projects-section center-column">
+    <h2>Project</h2>
+
+    <div class="projects-list">
+      <!--a div/card per project-->
+
+      <div class="project-card">
+        <a href="https://github.com/">
+          <img src="./img/portfolio.jpg" alt="">
+          <p>Portfolio Website</p>
+          <p>A responsive portfolio site to showcase my projects and resume. Build with HTML, CSS and JavaScript</p>
+          <p>2025</p>
+          <div class="project-skills">
+            <label for="" class="text-label">Django</label>
+            <label for="" class="text-label">CSS</label>
+            <label for="" class="text-label">JavaScript</label>
+            <label for="" class="text-label">SKILL</label>
+            <label for="" class="text-label">SKILL</label>
+          </div>
+        </a>
+      </div>
+
+      <div class="project-card">
+        <a href="https://github.com/">
+          <img src="./img/Task.jpg" alt="">
+          <p>Portfolio Website</p>
+          <p>A responsive portfolio site to showcase my projects and resume. Build with HTML, CSS and JavaScript</p>
+          <p>2025</p>
+          <div class="project-skills">
+            <label for="" class="text-label">Django</label>
+            <label for="" class="text-label">CSS</label>
+            <label for="" class="text-label">JavaScript</label>
+            <label for="" class="text-label">SKILL</label>
+            <label for="" class="text-label">SKILL</label>
+          </div>
+        </a>
+      </div>
+
+      <div class="project-card">
+        <a href="https://github.com/">
+          <img src="./img/weather.jpg" alt="">
+          <p>Portfolio Website</p>
+          <p>A responsive portfolio site to showcase my projects and resume. Build with HTML, CSS and JavaScript</p>
+          <p>2025</p>
+          <div class="project-skills">
+            <label for="" class="text-label">Django</label>
+            <label for="" class="text-label">CSS</label>
+            <label for="" class="text-label">JavaScript</label>
+            <label for="" class="text-label">SKILL</label>
+            <label for="" class="text-label">SKILL</label>
+          </div>
+        </a>
+      </div>
+
     </div>
   </section>
   
